--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@architect/sandbox": "^4.0.1",
-    "@11ty/eleventy": "^0.12.1"
+    "@11ty/eleventy": "^0.12.1",
+    "@begin/data": "^1.1.4",
+    "@architect/functions": "^4.0.0",
+    "tiny-json-http": "^7.1.2",
+    "xss": "^1.0.6"
   }
 }
